Fixed node alignment in IE.

--- a/src/styles/_nodes.scss
+++ b/src/styles/_nodes.scss
@@ -11,6 +11,7 @@
   .nodeTitle {
     position: absolute;
     top: 0px;
+    left: 0px;
     height: $collapsedNodeHeight;
     display: flex;
     align-items: center;
